# cnbicvsa

./: .gitignore  Makefile.am  configure.ac
extra/: Makefile.am
extra/icons/: Makefile.am
extra/icons/src/: icon001.xcf  icon002.xcf  icon003.xcf  icon004.xcf  icon005.xcf  icon006.xcf  icon007.xcf  icon008.xcf  icon009.xcf  icon010.xcf  icon011.xcf  icon012.xcf  icon013.xcf  icon014.xcf  icon015.xcf  icon016.xcf  icon017.xcf  icon018.xcf  icon019.xcf  icon020.xcf
extra/launcher/: Makefile.am  cp_cvsa_launcher
extra/xml/: Makefile.am  cvsa_template.xml
src/: .gitignore  ColorFeedback.cpp  ColorFeedback.hpp  Copilot.cpp  Copilot.hpp  Flags.hpp  InfiniteBar.cpp  InfiniteBar.hpp  Makefile.am  Target.cpp  Target.hpp  TargetControl.cpp  TargetControl.hpp  TargetGallery.cpp  TargetGallery.hpp  TrialControl.cpp  TrialControl.hpp  cnbicvsa.pc.in  cvsa_feedback_offline.cpp  cvsa_neglect_offline.cpp  cvsa_offline.cpp  cvsa_utilities.hpp  infinitebar.cpp  sandbox.cpp
tests/: .gitignore  Makefile.am  test_colorfeedback.cpp  test_gallery.cpp  test_target.cpp  test_targetcontrol.cpp
